fix(frontend): better scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,22 @@ button {
    /* Corrects inability to style clickable `input` types in iOS */
    -webkit-appearance: none;
  }
+
+::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+}
+
+::-webkit-scrollbar-track {
+    appearance: none;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 4px;
+    transition: background-color 1s ease-in-out;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.2);
+}
